<?xml version="1.0" encoding="utf-8"?>
<!--侧滑菜单的布局-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_marginRight="-150dp"
    android:layout_alignParentRight="true"
    android:layout_height="match_parent">
    <!--显示头像和一个背景-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:clipChildren="false"
        android:background="@drawable/me_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="left"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="-20dp"
                android:layout_marginLeft="30dp"
                android:src="@drawable/userhead_dealfut"/>
            <ImageView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:src="@drawable/wujiaoxing"/>
        </LinearLayout>

    </RelativeLayout>
    <!--我的资料-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:gravity="center"
        android:divider="@drawable/under_line"
        android:showDividers="end"
        android:background="@color/menuColor"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/user_icon1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/menu_home"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:src="@drawable/btn_icon_arrow"/>
    </LinearLayout>
    <!--修改密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:gravity="center"
        android:divider="@drawable/under_line"
        android:background="@color/menuColor"
        android:showDividers="end"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/pwd_icon1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/menu_modify_pwd"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_icon_arrow"/>
    </LinearLayout>
    <!--关于-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:gravity="center"
        android:divider="@drawable/under_line"
        android:background="@color/menuColor"
        android:showDividers="end"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/question"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_marginLeft="20dp"
            android:text="@string/menu_abount"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:src="@drawable/btn_icon_arrow"/>
    </LinearLayout>
    <!--我的二维码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:gravity="center"
        android:divider="@drawable/under_line"
        android:background="@color/menuColor"
        android:showDividers="end"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/qcode"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/menu_qcode"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:src="@drawable/btn_icon_arrow"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/menuColor"
        android:layout_weight="1">
        <Button
            android:id="@+id/menu_loginBtn"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="登录"
            android:background="@drawable/login_btn_shape"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

</LinearLayout>